BATM-7755 Fix ETH precision at Bitstamp (#1102)